crates/pg_syntax/tests/snapshots/postgres_regress/select_having@9.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO test_having VALUES (7, 4, 'cccc', 'h');"
---
InsertStmt@0..51
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..23
    Ident@12..23 "test_having"
  Whitespace@23..24 " "
  SelectStmt@24..49
    Values@24..30 "VALUES"
    Whitespace@30..31 " "
    Ascii40@31..32 "("
    List@32..49
      AConst@32..33
        Iconst@32..33 "7"
      Ascii44@33..34 ","
      Whitespace@34..35 " "
      AConst@35..36
        Iconst@35..36 "4"
      Ascii44@36..37 ","
      Whitespace@37..38 " "
      AConst@38..44
        Sconst@38..44 "'cccc'"
      Ascii44@44..45 ","
      Whitespace@45..46 " "
      AConst@46..49
        Sconst@46..49 "'h'"
  Ascii41@49..50 ")"
  Ascii59@50..51 ";"

